--- a/17.toDoList-1.2/package.json
+++ b/17.toDoList-1.2/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "mongoose": "^6.0.8"
+    "lodash": "^4.17.11",
+    "mongoose": "^5.3.4"
   }
 }
