--- a/keeper/package.json
+++ b/keeper/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "keeper-part-3-starting",
+  "name": "using-pre-built-react-components",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
@@ -7,7 +7,7 @@
   "dependencies": {
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-scripts": "3.2.0"
+    "react-scripts": "^4.0.3"
   },
   "devDependencies": {
     "typescript": "3.3.3"
