--- a/keeper/package.json
+++ b/keeper/package.json
@@ -5,9 +5,10 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^3.4.4"
   },
   "devDependencies": {
     "typescript": "3.3.3"
